# Grade-Desk

./: .gitignore  AGENTS.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: developer-documentation.md  implementation-plan.md
docs/modules/: analysis.md  app-shell.md  archive-workflow.md  ci-release-compatibility.md  grade-dashboard.md  grade-repository.md  jwxt-session.md  logging.md  platform.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: data.rs  jwxt.rs  lib.rs  logging.rs  main.rs
src-tauri/src/platform/: desktop.rs  linux.rs  macos.rs  mobile.rs  mod.rs  windows.rs
